--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
 	<properties>
 		<java.version>11</java.version>
-		<bcrypt.version>0.9.0</bcrypt.version>
+		<apache.commons.version>1.11</apache.commons.version>
 		<gson.version>2.8.6</gson.version>
 	</properties>
 
@@ -40,9 +40,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>at.favre.lib</groupId>
-			<artifactId>bcrypt</artifactId>
-			<version>${bcrypt.version}</version>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>${apache.commons.version}</version>
 		</dependency>
 
 		<dependency>
